# coretech-challenge

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
benchmark/: CMakeLists.txt
benchmarks/: CMakeLists.txt  b_main.cpp
src/: CMakeLists.txt  main.cpp  organise.cpp
test/: CMakeLists.txt  init_test.cpp
